--- a/hw2.html
+++ b/hw2.html
@@ -31,7 +31,22 @@
     </style>
 </head>
 <body>
-  <h1>Homework 2 - Coming Soon!!!!!</h1>
+  <h1>Homework 2 - Basic Operations</h1>
+
+<ul>
+  <li>
+    <a href="part1.html">Part 1</a> – Display styled text using JavaScript
+  </li>
+  <li>
+    <a href="part2.html">Part 2</a> – Enter three numbers and calculate sum, average, product, min, and max
+  </li>
+  <li>
+    <a href="extracredit.html">Extra Credit</a> – (Optional)
+  </li>
+  <li>
+    <a href="index.html">Back to Homework 1</a>
+  </li>
+</ul>
     <p><a href="index.html">Back to CIS 114 Assignments</a></p>
 </body>
 </html>
