--- a/hw2.html
+++ b/hw2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homework 2 - CIS 114 Assignments</title>
+  <title>Homework 2 - Basic Operations</title>
    <style>
         body {
             font-family: Arial, sans-serif;
@@ -31,22 +31,32 @@
     </style>
 </head>
 <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Homework 2 - Basic Operations</title>
+</head>
+<body>
   <h1>Homework 2 - Basic Operations</h1>
 
-<ul>
-  <li>
-    <a href="part1.html">Part 1</a> – Display styled text using JavaScript
-  </li>
-  <li>
-    <a href="part2.html">Part 2</a> – Enter three numbers and calculate sum, average, product, min, and max
-  </li>
-  <li>
-    <a href="extracredit.html">Extra Credit</a> – (Optional)
-  </li>
-  <li>
-    <a href="index.html">Back to Homework 1</a>
-  </li>
-</ul>
+  <ul>
+    <li>
+      <a href="part1.html">Part 1</a> – Display styled text using JavaScript
+    </li>
+    <li>
+      <a href="part2.html">Part 2</a> – Enter three numbers and calculate sum, average, product, min, and max
+    </li>
+    <li>
+      <a href="extracredit.html">Extra Credit</a> – (Optional additional exercises)
+    </li>
+    <li>
+      <a href="hw1.html">Back to Homework 1</a>
+    </li>
+  </ul>
+</body>
+</html>
+
     <p><a href="index.html">Back to CIS 114 Assignments</a></p>
 </body>
 </html>
