--- a/hw2.html
+++ b/hw2.html
@@ -41,18 +41,10 @@
   <h1>Homework 2 - Basic Operations</h1>
 
   <ul>
-    <li>
-      <a href="part1.html">Part 1</a> – Display styled text using JavaScript
-    </li>
-    <li>
-      <a href="part2.html">Part 2</a> – Enter three numbers and calculate sum, average, product, min, and max
-    </li>
-    <li>
-      <a href="extracredit.html">Extra Credit</a> – (Optional additional exercises)
-    </li>
-    <li>
-      <a href="hw1.html">Back to Homework 1</a>
-    </li>
+    <li><a href="part1.html">Part 1</a></li>
+    <li><a href="part2.html">Part 2</a></li>
+    <li><a href="extracredit.html">Extra Credit</a></li>
+    <li><a href="hw1.html">Back to Homework 1</a></li>
   </ul>
 </body>
 </html>
