--- a/hw2.html
+++ b/hw2.html
@@ -16,6 +16,14 @@
             color: #333;
         }
 
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin: 10px 0;
+        }
         a {
             text-decoration: none;
             color: white;
